--- a/visite/18476801/index.html
+++ b/visite/18476801/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>
-		<title>ISIFA • Visite immersive</title>
+		<title>ISIFA • Visite virtuelle</title>
 		<link rel="icon" href="./skin/inoca2.png" type="image/x-icon">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, viewport-fit=cover" />
